src/main/java/com/example/digital_wallet_system/errors/exceptions/user/UnauthorizedException.java
package com.example.digital_wallet_system.errors.exceptions.user;

public class UnauthorizedException extends RuntimeException {
    public UnauthorizedException(String message) {
        super(message);
    }
}
